# velay

./: .gitignore  Cargo.toml  README.md
src/: app_policy_config.rs  app_state.rs  audio_player.rs  auto_mic.rs  config.rs  gui.rs  hotkey_daemon.rs  hotkeys.rs  main.rs  pending.rs  policy_config.rs  state_machine.rs
