[package]
name = "soundpad"
version = "0.1.0"
edition = "2024"

[dependencies]
eframe = "0.35.0"
rfd = "0.15"
rodio = "0.22.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
win-hotkeys = "0.5.1"
windows = { version = "0.62.2", features = ["Win32_Media_Audio", "Win32_System_Com", "Win32_Foundation", "Win32_Devices_FunctionDiscovery", "Win32_System_Com_StructuredStorage", "Win32_UI_Shell_PropertiesSystem", "Win32_System_Variant", "Win32_System_Console", "Win32_UI_Input_KeyboardAndMouse", "Win32_UI_WindowsAndMessaging", "Win32_System_Threading", "Win32_System_WinRT", "Win32_System_Diagnostics_ToolHelp"] }
windows-core = "0.62.2"
